<resources>
    <string name="app_name">جیم پین</string>
    <string name="my_place">مجموعه من</string>
    <string name="works">کار ها</string>
    <string name="reserves">رزرو ها</string>
    <string name="pleaseclickAgainForExit">برای خروج یک بار دیگر کلید بک را بزنید</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="login">ورود</string>
    <string name="activation_code">کد فعالسازی</string>
    <string name="submit">تایید</string>
    <string name="RemainTime">نرسیدن کد  %s </string>
    <string name="resend">ارسال مجدد</string>
    <string name="phone_number_is_not_valid">لطفا شماره همراه را به صورت صحیح وارد نمایید</string>
    <string name="can_not_send_sms_Now">در حال حاضر امکان ارسال پیامک وجود ندارد</string>
    <string name="activation_code_is_not_valid">کد فعالسازی معتبر نیست</string>
    <string name="text_placeholder">-----</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="signup">ثبت نام</string>
    <string name="sports">ورزش ها</string>
    <string name="places">مجموعه ها</string>
    <string name="my_reserves">رزروهای من</string>
    <string name="enter_your_phone_number">لطفا شماره همراه خود را وارد نمایید</string>
    <string name="sample_phone_number">0912XXXXXXX</string>
    <string name="slogan">سامانه یکپارچه ورزشی</string>
    <string name="sample_notify_text">دوستات رو دعوت کن و از جیم پین جایزه بگیر.</string>
    <string name="my_events">رویدادها</string>
    <string name="contents">آموزش</string>
    <string name="profile">پروفایل</string>
    <string name="please_share">به اشتراک بگذارید</string>
    <string name="edit">ویرایش</string>
    <string name="notifications">اعلانات</string>
    <string name="messages">پیام ها</string>
    <string name="mobile">موبایل</string>
    <string name="bio">بیوگرافی</string>
    <string name="link">لینک</string>
    <string name="text_lorem_epsom">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker in</string>
    <string name="text_lorem_epsom_fa">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="pointsSection">امتیاز ها و بازخورد</string>
    <string name="Walking">پیاده‌روی</string>
    <string name="listOfExistWalkings">لیست پیاده روی های موجود</string>
    <string name="remainingCapacity">ظرفیت باقی‌مانده :</string>
    <string name="i_am_in">شرکت میکنم</string>
    <string name="create_walkig_event">ساخت رویداد جدید پیاده‌روی</string>
    <string name="title">موضوع رویداد :</string>
    <string name="walking_title_example">پیاده روی ساده در میرداماد</string>
    <string name="select_time">زمان رویداد را مشخص کنید</string>
    <string name="select_start_point">مبدا را مشخص کنید</string>
    <string name="select_end_point">نقطه انتهای مسیر را مشخص کنید</string>
    <string name="submit_points">نقاط انتخاب شده را تایید کنید</string>
    <string name="select_peolple_count">تعداد همراهان را انتخاب کنید :</string>
    <string name="create_event">ساخت رویداد</string>
    <string name="confirm">تایید</string>
    <string name="followers_count">_ دنبال کننده</string>
    <string name="followings_count">_ دنبال شونده</string>
    <string name="cancel_event">لغو رویداد</string>
    <string name="cancel_join">منصرف شدم</string>
    <string name="inviteFriendBySms">سلام %s \n توی اپلیکیشن جیم پین با خیلیا میتونیم بریم بیرون تو هم عضو شو : http://gympin.ir</string>
    <string name="share_event">ازت دعوت میکنم توی ایونت
        %1$s
        من رو همراهی کنی.
        \n\t %2$s</string>
    <string name="share_subject">شما به یک ایونت دعوت شدید : </string>
    <string name="share_using">اشترک گذاری ایونت</string>
    <string name="cancel">لغو</string>
    <string name="name">نام</string>
    <string name="family_name">نام خانوادگی</string>
    <string name="birthday">تاریخ تولد</string>
    <string name="email">ایمیل</string>
    <string name="national_code">کد ملی</string>
    <string name="user_name">نام کاربری</string>
    <string name="reserve">رزرو</string>
    <string name="plans">بلیط ها</string>
</resources>
