<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/_200sdp">

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/iran_sans_normal"
        android:text="@string/text_placeholder"
        android:textColor="@color/grey_dim"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/_rectangle_radius_strok_cyan"
        android:fontFamily="@font/iran_sans_normal"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/confirm"
        android:textColor="@color/black_Bistre"
        android:textSize="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_btn_dismiss"
        app:layout_constraintTop_toBottomOf="@+id/txt_message" />


    <TextView
        android:id="@+id/txt_btn_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/_rectangle_radius_strok_red"
        android:fontFamily="@font/iran_sans_normal"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textColor="@color/black_Bistre"
        android:textSize="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_message" />


</androidx.constraintlayout.widget.ConstraintLayout>