<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_btn_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45sdp"
                android:fontFamily="@font/iran_sans_normal"
                android:text="@string/title"
                android:textColor="@color/black_Bistre"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/register_default_margin"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/c_register_edittext_bg_1"
                android:fontFamily="@font/iran_sans_normal"
                android:gravity="start|center"
                android:hint="@string/walking_title_example"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/iran_sans_normal"
                android:text="@string/title"
                android:textColor="@color/black_Bistre"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/register_default_margin"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/c_register_edittext_bg_1"
                android:fontFamily="@font/iran_sans_normal"
                android:gravity="start|top"
                android:hint="@string/walking_title_example"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_95sdp"
                android:minLines="3"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/txt_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:background="@drawable/_rectangle_radius_strok_cyan"
                android:fontFamily="@font/iran_sans_normal"
                android:text="@string/select_time"
                android:textColor="@color/black_Bistre"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/iran_sans_normal"
                android:text="@string/select_start_point"
                android:textColor="@color/black_Bistre"
                android:textSize="@dimen/_10sdp" />

            <com.notrika.gympin.util.component.map.MyMapCardView
                android:id="@+id/my_map"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/iran_sans_normal"
                android:text="@string/select_peolple_count"
                android:textColor="@color/black_Bistre"
                android:textSize="@dimen/_10sdp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_people_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:itemCount="5"
                tools:listitem="@layout/l_event_user_count"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:itemCount="15"
                tools:listitem="@layout/l_event_user_item" />
        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_header_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/iran_sans_bold"
            android:maxLines="1"
            android:text="@string/create_walkig_event"
            android:textColor="@color/white_london"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/txt_btn_join"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/cyan_light"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white_london"
        android:fontFamily="@font/iran_sans_bold"
        android:text="@string/create_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>