<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_user_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/sampleuser5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_user_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/mobile"
        android:fontFamily="@font/iran_sans_normal"
        android:textColor="@color/black_ciatel"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="@+id/edt_mobile"
        app:layout_constraintTop_toBottomOf="@+id/img_user_image" />

    <EditText
        android:id="@+id/edt_mobile"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/_rectangle_radius_fill_grey"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/iran_sans_bold"
        android:inputType="number"
        android:textSize="@dimen/_11sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:textColor="@color/grey_Davy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_user_mobile" />

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/name_family"
        android:fontFamily="@font/iran_sans_normal"
        android:textColor="@color/black_ciatel"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/_rectangle_radius_fill_grey"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/iran_sans_bold"
        android:inputType="textPersonName"
        android:textSize="@dimen/_11sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:textColor="@color/grey_Davy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_name" />

    <TextView
        android:id="@+id/lbl_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/bio"
        android:fontFamily="@font/iran_sans_normal"
        android:textColor="@color/black_ciatel"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="@+id/edt_bio"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <EditText
        android:id="@+id/edt_bio"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:lines="3"
        android:background="@drawable/_rectangle_radius_fill_grey"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/iran_sans_bold"
        android:inputType="textPersonName"
        android:textSize="@dimen/_11sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:textColor="@color/grey_Davy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bio" />
    <TextView
        android:id="@+id/lbl_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/link"
        android:fontFamily="@font/iran_sans_normal"
        android:textColor="@color/black_ciatel"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="@+id/edt_link"
        app:layout_constraintTop_toBottomOf="@+id/edt_bio" />

    <EditText
        android:id="@+id/edt_link"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/_rectangle_radius_fill_grey"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/iran_sans_bold"
        android:inputType="textPersonName"
        android:textSize="@dimen/_11sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:textColor="@color/grey_Davy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_link" />

</androidx.constraintlayout.widget.ConstraintLayout>