<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_london">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/black_copenhagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/gympin_logo"
            android:tint="@color/red_amaranth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/register_default_margin"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/white_Munsell"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_lagin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:paddingTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/txt_phone_number_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black_copenhagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:background="@drawable/c_register_edittext_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:hint="@string/sample_phone_number"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_19sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_title" />



        <Button
            android:id="@+id/btn_submith_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/c_register_btn_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/login"
            android:textColor="@color/white_Munsell"
            android:textSize="@dimen/_15sdp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:src="@drawable/img_start_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_activate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/txt_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black_copenhagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/et_activation_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:background="@drawable/c_register_edittext_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:hint="@string/activation_code"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_19sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_title" />



        <Button
            android:id="@+id/btn_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@null"
            android:padding="0dp"
            android:textColor="@color/white_Munsell"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_submith_activation_code"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_submith_activation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="32dp"
            android:background="@drawable/c_register_btn_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/submit"
            android:textColor="@color/white_Munsell"
            android:textSize="@dimen/_15sdp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_activation_code" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:src="@drawable/img_finish_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/txt_phone_number_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black_copenhagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:background="@drawable/c_register_edittext_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:hint="@string/sample_phone_number"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_19sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_title2"
            tools:layout_editor_absoluteX="26dp" />

        <TextView
            android:id="@+id/txt_user_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/name_family"
            android:textColor="@color/black_copenhagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_phone_number" />

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/register_default_margin"
            android:background="@drawable/c_register_edittext_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_19sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_name_title"
            tools:layout_editor_absoluteX="26dp" />


        <Button
            android:id="@+id/btn_submith_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/c_register_btn_bg_1"
            android:fontFamily="@font/iran_sans_normal"
            android:text="@string/signup"
            android:textColor="@color/white_Munsell"
            android:textSize="@dimen/_15sdp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_name" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:src="@drawable/img_start_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>